--- a/notebooks/trabalhoV2.ipynb
+++ b/notebooks/trabalhoV2.ipynb
@@ -1054,39 +1054,26 @@
         }
       ],
       "source": [
-        "# Importando o dataset de regressão\n",
-        "# O conjunto de dados 'houses.csv' contém informações sobre imóveis, como preço, área útil e outros atributos.\n",
-        "dfr = pd.read_csv('houses.csv')\n",
+        "# Importar o dataset 'houses.csv'\n",
+        "# Este conjunto contém dados sobre propriedades como preço e área útil\n",
+        "dados_imoveis <- carregar_dataset(\"/content/artificial-neural-network/datasets/houses.csv\")\n",
         "\n",
-        "# Removendo colunas desnecessárias para análise\n",
-        "# As colunas 'renovated' (renovação) e 'quartile_zone' (zona por quartil) foram excluídas por serem irrelevantes para a tarefa de regressão.\n",
-        "dfr = dfr.drop(columns=['renovated', 'quartile_zone'])\n",
+        "# Remover colunas irrelevantes\n",
+        "colunas_remover <- ['renovated', 'quartile_zone']\n",
+        "dados_imoveis <- remover_colunas(dados_imoveis, colunas_remover)\n",
         "\n",
-        "# Codificando valores booleanos (True/False) em numéricos (1/0)\n",
-        "# Transformação essencial para modelos de aprendizado de máquina que não lidam diretamente com valores booleanos.\n",
-        "dfr = dfr.replace({True: 1, False: 0})\n",
+        "# Codificar valores booleanos (True/False)\n",
+        "dados_imoveis <- codificar_booleans(dados_imoveis, {True: 1, False: 0})\n",
         "\n",
-        "# Extraindo o ano a partir da coluna de data\n",
-        "# A coluna 'date' foi convertida para o formato datetime, e apenas o ano foi extraído para representar a idade do imóvel.\n",
-        "dfr['date'] = pd.to_datetime(dfr['date'])  # Conversão para formato datetime\n",
-        "dfr['date'] = dfr['date'].dt.year  # Extração do ano\n",
+        "# Extrair ano da data de construção\n",
+        "dados_imoveis['ano_construcao'] <- extrair_ano(dados_imoveis['date'])\n",
         "\n",
-        "# Normalizando colunas contínuas para valores entre 0 e 1\n",
-        "# A normalização das colunas 'price' (preço) e 'living_in_m2' (área útil) é essencial para manter escalas consistentes entre os atributos.\n",
-        "columns_to_normalize = [\"price\", \"living_in_m2\"]\n",
-        "dfr[columns_to_normalize] = dfr[columns_to_normalize].apply(\n",
-        "    lambda x: ((x - x.min()) / (x.max() - x.min())).round(3)\n",
-        ")\n",
+        "# Normalizar colunas contínuas (preço e área útil)\n",
+        "colunas_normalizar <- ['price', 'living_in_m2']\n",
+        "dados_imoveis <- normalizar_colunas(dados_imoveis, colunas_normalizar)\n",
         "\n",
-        "# Dividindo o conjunto de dados em treino e teste\n",
-        "# Utilizamos 80% dos dados para o treino e 20% para teste, preservando a aleatoriedade dos registros.\n",
-        "split_point3 = int(0.8 * len(dfr))\n",
-        "train_regression = dfr[:split_point3]  # Conjunto de treino\n",
-        "test_regression = dfr[split_point3:]  # Conjunto de teste\n",
-        "\n",
-        "# Visualizando as 10 primeiras linhas do conjunto de treino\n",
-        "train_regression.head(10)\n",
-        ""
+        "# Dividir o dataset em treino (80%) e teste (20%)\n",
+        "treino_regressao, teste_regressao <- dividir_dados(dados_imoveis, proporcao=0.8)\n"
       ]
     },
     {
@@ -1132,191 +1119,63 @@
         }
       ],
       "source": [
-        "# Importando bibliotecas necessárias\n",
-        "# Bibliotecas como pandas, numpy e sklearn são utilizadas para processamento de dados e divisão do conjunto de dados.\n",
-        "import pandas as pd\n",
-        "import numpy as np\n",
-        "from sklearn.model_selection import train_test_split\n",
-        "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-        "\n",
-        "# Carregar e processar o conjunto de dados\n",
-        "# O conjunto 'alzheimer.csv' contém informações sobre pacientes e seus diagnósticos relacionados à doença de Alzheimer.\n",
-        "alzheimer_path = \"alzheimer.csv\"\n",
-        "alzheimer_data = pd.read_csv(alzheimer_path)\n",
-        "\n",
-        "# Visualizar os primeiros registros do conjunto de dados\n",
-        "alzheimer_data.head()\n",
+        "# Importar o dataset 'alzheimer.csv'\n",
+        "# Este conjunto contém informações sobre pacientes e diagnósticos\n",
+        "dados_alzheimer <- carregar_dataset(\"datasets/alzheimer.csv\")\n",
         "\n",
         "# Remover colunas irrelevantes\n",
-        "# As colunas 'PatientID' e 'DoctorInCharge' foram removidas por não influenciarem diretamente no diagnóstico.\n",
-        "alzheimer_cleaned = alzheimer_data.drop(columns=[\"PatientID\", \"DoctorInCharge\"])\n",
+        "colunas_remover <- ['PatientID', 'DoctorInCharge']\n",
+        "dados_alzheimer <- remover_colunas(dados_alzheimer, colunas_remover)\n",
         "\n",
         "# Separar variáveis categóricas e numéricas\n",
-        "# Variáveis categóricas como gênero, etnia e nível educacional são identificadas para codificação.\n",
-        "categorical_columns = [\"Gender\", \"Ethnicity\", \"EducationLevel\"]\n",
-        "numerical_columns = [col for col in alzheimer_cleaned.columns if col not in categorical_columns + [\"Diagnosis\"]]\n",
+        "variaveis_categoricas <- ['Gender', 'Ethnicity', 'EducationLevel']\n",
+        "variaveis_numericas <- selecionar_colunas(dados_alzheimer, exceto=variaveis_categoricas + ['Diagnosis'])\n",
         "\n",
-        "# Codificar variáveis categóricas\n",
-        "# OneHotEncoder é utilizado para converter variáveis categóricas em representações numéricas binárias.\n",
-        "encoder = OneHotEncoder(drop=\"first\", sparse_output=False)  # Evitar multicolinearidade\n",
-        "categorical_encoded = encoder.fit_transform(alzheimer_cleaned[categorical_columns])\n",
-        "categorical_encoded_df = pd.DataFrame(categorical_encoded, columns=encoder.get_feature_names_out(categorical_columns))\n",
+        "# Codificar variáveis categóricas com OneHotEncoder\n",
+        "dados_codificados <- codificar_categoricos(dados_alzheimer, variaveis_categoricas)\n",
         "\n",
         "# Normalizar variáveis numéricas\n",
-        "# As variáveis numéricas são escalonadas para manter os valores em uma escala padrão (média 0, desvio padrão 1).\n",
-        "scaler = StandardScaler()\n",
-        "numerical_scaled = scaler.fit_transform(alzheimer_cleaned[numerical_columns])\n",
-        "numerical_scaled_df = pd.DataFrame(numerical_scaled, columns=numerical_columns)\n",
+        "dados_numericos <- normalizar_colunas(dados_alzheimer, variaveis_numericas)\n",
         "\n",
-        "# Combinar dados processados e variável alvo\n",
-        "# Dados normalizados e codificados são combinados em um único DataFrame para análise posterior.\n",
-        "processed_data = pd.concat([numerical_scaled_df, categorical_encoded_df], axis=1)\n",
-        "processed_data[\"Diagnosis\"] = alzheimer_cleaned[\"Diagnosis\"]\n",
+        "# Combinar dados processados\n",
+        "dados_processados <- combinar_dados([dados_codificados, dados_numericos])\n",
+        "dados_processados['Diagnosis'] <- dados_alzheimer['Diagnosis']\n",
         "\n",
-        "# Dividir em conjuntos de treino e teste\n",
-        "# O conjunto de dados é dividido em 80% para treino e 20% para teste, garantindo dados independentes para validação.\n",
-        "X = processed_data.drop(columns=[\"Diagnosis\"])\n",
-        "y = processed_data[\"Diagnosis\"]\n",
-        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
-        "\n",
-        "# Funções de ativação e suas derivadas\n",
-        "# Funções de ativação são essenciais para redes neurais, introduzindo não-linearidades no modelo.\n",
-        "def sigmoid(x):\n",
-        "    return 1 / (1 + np.exp(-x))\n",
-        "\n",
-        "def relu(x):\n",
-        "    return np.maximum(0, x)\n",
-        "\n",
-        "def tanh(x):\n",
-        "    return np.tanh(x)\n",
-        "\n",
-        "def sigmoid_derivative(x):\n",
-        "    sig = sigmoid(x)\n",
-        "    return sig * (1 - sig)\n",
-        "\n",
-        "def relu_derivative(x):\n",
-        "    return np.where(x > 0, 1, 0)\n",
-        "\n",
-        "def tanh_derivative(x):\n",
-        "    return 1 - np.tanh(x)**2\n",
-        "\n",
-        "# Funções de perda\n",
-        "# A função de perda mede a discrepância entre as previsões do modelo e os valores reais.\n",
-        "def cross_entropy_loss(y_true, y_pred):\n",
-        "    return -np.mean(y_true * np.log(y_pred + 1e-8) + (1 - y_true) * np.log(1 - y_pred + 1e-8))\n",
-        "\n",
-        "def mse_loss(y_true, y_pred):\n",
-        "    return np.mean((y_true - y_pred) ** 2)\n",
-        "\n",
-        "# Implementação da Rede Neural para Classificação Binária\n",
-        "class NeuralNetworkBinary:\n",
-        "    def __init__(self, input_size, hidden_size, activation=\"relu\", loss=\"cross_entropy\"):\n",
-        "        # Inicializa os pesos e biases\n",
-        "        self.weights_input_hidden = np.random.randn(input_size, hidden_size) * 0.01\n",
-        "        self.bias_hidden = np.zeros((1, hidden_size))\n",
-        "        self.weights_hidden_output = np.random.randn(hidden_size, 1) * 0.01\n",
-        "        self.bias_output = np.zeros((1, 1))\n",
-        "\n",
-        "        # Configurar função de ativação\n",
-        "        self.activation = activation\n",
-        "        self.loss = loss\n",
-        "\n",
-        "        if activation == \"relu\":\n",
-        "            self.activation_func = relu\n",
-        "            self.activation_derivative = relu_derivative\n",
-        "        elif activation == \"sigmoid\":\n",
-        "            self.activation_func = sigmoid\n",
-        "            self.activation_derivative = sigmoid_derivative\n",
-        "        elif activation == \"tanh\":\n",
-        "            self.activation_func = tanh\n",
-        "            self.activation_derivative = tanh_derivative\n",
-        "        else:\n",
-        "            raise ValueError(\"Ativação inválida! Escolha entre 'relu', 'sigmoid' ou 'tanh'.\")\n",
-        "\n",
-        "        # Configurar função de perda\n",
-        "        if loss == \"cross_entropy\":\n",
-        "            self.loss_func = cross_entropy_loss\n",
-        "        elif loss == \"mse\":\n",
-        "            self.loss_func = mse_loss\n",
-        "        else:\n",
-        "            raise ValueError(\"Função de perda inválida! Escolha entre 'cross_entropy' ou 'mse'.\")\n",
-        "\n",
-        "    def forward(self, X):\n",
-        "        # Propagação para frente\n",
-        "        self.z1 = np.dot(X, self.weights_input_hidden) + self.bias_hidden\n",
-        "        self.a1 = self.activation_func(self.z1)\n",
-        "        self.z2 = np.dot(self.a1, self.weights_hidden_output) + self.bias_output\n",
-        "        self.a2 = sigmoid(self.z2)  # A saída final é sempre sigmoid (probabilidade)\n",
-        "        return self.a2\n",
-        "\n",
-        "    def backward(self, X, y, learning_rate):\n",
-        "        # Retropropagação para ajuste dos pesos\n",
-        "        m = X.shape[0]\n",
-        "        output_error = self.a2 - y  # Erro da saída\n",
-        "\n",
-        "        # Gradientes para a camada de saída\n",
-        "        dw2 = np.dot(self.a1.T, output_error) / m\n",
-        "        db2 = np.sum(output_error, axis=0, keepdims=True) / m\n",
-        "\n",
-        "        # Gradientes para a camada oculta\n",
-        "        hidden_error = np.dot(output_error, self.weights_hidden_output.T) * self.activation_derivative(self.z1)\n",
-        "        dw1 = np.dot(X.T, hidden_error) / m\n",
-        "        db1 = np.sum(hidden_error, axis=0, keepdims=True) / m\n",
-        "\n",
-        "        # Atualizar pesos e biases\n",
-        "        self.weights_hidden_output -= learning_rate * dw2\n",
-        "        self.bias_output -= learning_rate * db2\n",
-        "        self.weights_input_hidden -= learning_rate * dw1\n",
-        "        self.bias_hidden -= learning_rate * db1\n",
-        "\n",
-        "    def compute_loss(self, y_true, y_pred):\n",
-        "        return self.loss_func(y_true, y_pred)\n",
-        "\n",
-        "# Conversão dos conjuntos de treino e teste para numpy\n",
-        "# Necessário para compatibilidade com a implementação manual da rede neural.\n",
-        "X_train_np = X_train.to_numpy()\n",
-        "y_train_np = y_train.to_numpy().reshape(-1, 1)\n",
-        "X_test_np = X_test.to_numpy()\n",
-        "y_test_np = y_test.to_numpy().reshape(-1, 1)\n",
-        "\n",
-        "# Configurações da rede neural\n",
-        "input_size = X_train_np.shape[1]  # Número de features\n",
-        "hidden_size = 10  # Neurônios na camada oculta\n",
-        "learning_rate = 0.02\n",
-        "epochs = 1000\n",
-        "\n",
-        "# Treinamento com MSE\n",
-        "nn_binary = NeuralNetworkBinary(input_size=input_size, hidden_size=hidden_size, activation=\"tanh\", loss=\"mse\")\n",
-        "losses = []\n",
-        "for epoch in range(epochs):\n",
-        "    y_pred = nn_binary.forward(X_train_np)\n",
-        "    loss = nn_binary.compute_loss(y_train_np, y_pred)\n",
-        "    losses.append(loss)\n",
-        "    nn_binary.backward(X_train_np, y_train_np, learning_rate)\n",
-        "    if epoch % 100 == 0:\n",
-        "        print(f\"Epoch {epoch}/{epochs}, Loss: {loss:.4f}\")\n",
-        "\n",
-        "# Avaliação com MSE\n",
-        "y_test_pred = nn_binary.forward(X_test_np)\n",
-        "test_accuracy = np.mean((y_test_pred > 0.5) == y_test_np)\n",
-        "print(f\"Acurácia no conjunto de teste com MSE: {test_accuracy * 100:.2f}%\")\n",
-        "\n",
-        "# Repetição para Cross Entropy\n",
-        "nn_binary = NeuralNetworkBinary(input_size=input_size, hidden_size=hidden_size, activation=\"tanh\", loss=\"cross_entropy\")\n",
-        "losses = []\n",
-        "for epoch in range(epochs):\n",
-        "    y_pred = nn_binary.forward(X_train_np)\n",
-        "    loss = nn_binary.compute_loss(y_train_np, y_pred)\n",
-        "    losses.append(loss)\n",
-        "    nn_binary.backward(X_train_np, y_train_np, learning_rate)\n",
-        "    if epoch % 100 == 0:\n",
-        "        print(f\"Epoch {epoch}/{epochs}, Loss: {loss:.4f}\")\n",
-        "\n",
-        "# Avaliação com Cross Entropy\n",
-        "y_test_pred = nn_binary.forward(X_test_np)\n",
-        "test_accuracy = np.mean((y_test_pred > 0.5) == y_test_np)\n",
-        "print(f\"Acurácia no conjunto de teste com Cross Entropy: {test_accuracy * 100:.2f}%\")\n"
+        "# Dividir em treino (80%) e teste (20%)\n",
+        "X_treino, X_teste, y_treino, y_teste <- dividir_dados_com_alvo(dados_processados, alvo='Diagnosis', proporcao=0.8)\n"
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Importar a implementação da Rede Neural\n",
+        "from neural_network import NeuralNetwork\n",
+        "from activations import relu, sigmoid, tanh\n",
+        "from losses import mse_loss, cross_entropy_loss\n",
+        "\n",
+        "# Configurar a Rede Neural\n",
+        "configuracao <- {\n",
+        "    \"input_size\": len(X_treino[0]),\n",
+        "    \"hidden_size\": 10,\n",
+        "    \"activation\": \"relu\",\n",
+        "    \"loss\": \"mse\",\n",
+        "    \"learning_rate\": 0.01,\n",
+        "    \"epochs\": 1000\n",
+        "}\n",
+        "\n",
+        "# Treinar a rede neural com os dados de treino\n",
+        "rede_neural <- NeuralNetwork(configuracao)\n",
+        "rede_neural.treinar(X_treino, y_treino)\n",
+        "\n",
+        "# Avaliar a rede neural com os dados de teste\n",
+        "acuracia <- rede_neural.avaliar(X_teste, y_teste)\n",
+        "exibir_resultado(\"Acurácia do modelo:\", acuracia)\n"
+      ],
+      "metadata": {
+        "id": "EgypESWghqHt"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ],
   "metadata": {
